--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768207.md#1" target="_blank">新加坡现首例武汉肺炎 港府提升应对级别</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>1月4日，新加坡发现首名与武汉肺炎疫情有关的可疑病例；当天，港府启动了“严重应变”级别，应对这种来自武汉市的神秘病毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768225.md#1" target="_blank">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768225.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111262611086-600x400-150x120.jpg" align ="left"></a>大陆多地遭新年首轮“霾伏”， 2日至3日，出现大范围PM2.5（细颗粒物）污染。4日至6日，重污染范围继续扩大至华北黄淮汾渭平原等地，69个市启动重污染预警。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-capitol-flag-150x120.jpg" align ="left"></a>高薇薇的家庭故事，只是这场最深重灾难的一个缩影。美国资深国会议员史蒂夫?金2019年12月10日在人权日研讨会上对法轮功的声援，也是国际社会正义之声的一个缩影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768055.md#1" target="_blank">川普击毙伊朗二号人物 对中共释何种信号</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768055.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C5-150x120.jpg" align ="left"></a>美军击毙伊朗将军卡西姆?索莱马尼（Qasem Soleimani），中国专家说，美国此举向伊朗的主要盟友北京政权发出强烈信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank">习近平谈中共领导人更替 接班人制再引关注</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>近期，习近平本人谈到中共“国家领导层”的更替问题，立即引发关注。因为中共接班人一直是外界关注的焦点，也是中共权斗的风向标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768112.md#1" target="_blank">担心国安风险 美五大军种全面禁用抖音</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1073256498-150x120.jpg" align ="left"></a>由于担心中国短影音平台抖音（TikTok）存在国家安全风险，美国五大军种全面禁用抖音。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank">美摄影教授被拒入境香港 曾拍摄抗议照片</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/130909110856100311-150x120.jpg" align ="left"></a>周四（1月2日），美国一所大学的摄影教授被拒绝入境香港。这名教授去年曾在香港报导抗议活动，且曾香港警察逮捕，但不久后被释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:31 AM							</td></tr>
@@ -20,9 +24,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766821.md#1" target="_blank">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180494181-1-150x120.jpg" align ="left"></a>北京与德黑兰的外交关系日趋温和，美国与伊朗冲突升级，是否会影响美中贸易谈判？专家认为答案是否定的，因为目前的经济问题已使中共焦头烂额，无瑕顾及其它事务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755421.md#1" target="_blank">2020年中国十个科技品牌在海外恐碰壁</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/060fab95ddbb0c11d145f09138cad61e-600x400-150x120.jpg" align ="left"></a>2019年即将过去。这一年发生了一系列国际大事，令中国品牌的国际地位随之下降及失去信任。如华为、旷视、商汤等科技公司引发的安全隐忧，全球对中国品牌的印象变差。大纪元在此为您盘点2020年在海外市场形势不妙的十大中国品牌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11765922.md#1" target="_blank">王赫：中国经济乱象纷呈 中共束手无策</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11765922.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2-guangzhou-city-GettyImages-492909833-150x120.jpg" align ="left"></a>2019年大陆经济下坠让中共胆战心惊。虽然，2011年以来，大陆经济增长率就持续下跌，2013年当局称之为“新常态”，称是“三期叠加”的结果（即所谓“增长速度换挡期、结构调整阵痛期、前期刺激政策消化期”，是经济周期性、结构性、体制性问题相互交织）；但，迄今下跌没有探底，谁也不知道“底”在哪里，也就更谈不上什么时候止跌回升了，这也是中共最大的心病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 7:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766445.md#1" target="_blank">中共高速收费糗事：拦急救车  无高速路也得办卡</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1440px-ETC_Lane_in_China-150x120.jpg" align ="left"></a>大陆1月1日零时统一启用ETC（电子不停车收费系统），出现了诸多尴尬事，比如正在送伤者的救护车司机被强行下车缴费，一些地区没有高速公路却被分派指标，还有引发堵车和被质疑多扣费等，招来网民热议，指责当局在技术不完善时向民众强推ETC。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766574.md#1" target="_blank">除掉伊朗二号人物 川普：为了止战非宣战</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766574.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8b8c335e55462cdc01c34358b0da4a58-150x120.jpg" align ="left"></a>美东时间周五（1月3日）下午3点50分左右，美国总统川普（特朗普）首次针对美军在伊拉克机场击毙伊朗二号人物卡西姆?索莱马尼（Qassim Soleimani）公开发表声明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766426.md#1" target="_blank">习近平与林郑新年致辞有难言之隐？专家解读</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c9bc9efc2af3f02a3736f0494ff4c689@1200x1200-150x120.jpg" align ="left"></a>新年伊始，中港领导人都发表了新年致辞，引起各方解读。专家分析，习近平全文“报喜不报忧”，特点是“回避”；而香港特首林郑月娥，面对百万港人上街迎新年，更是回避，对港人的诉求就是不回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
 
 据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
@@ -34,6 +35,5 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767498.md#1" target="_blank">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br></h3>湖北武汉市不明原因肺炎（外界怀疑SARS疫情）风波在当局的封锁隐瞒下，内地一片“风平浪静”，香港则已启动严重应变级别，香港专家称有充分理由相信当地已发生怀疑人传人情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767423.md#1" target="_blank">大批明星搭机资料遭国航员工泄露</a><br></h3>日前，中国国际航空公司证实有员工外泄数位明星的飞行纪录。目前，该员工已被做出停飞处分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767304.md#1" target="_blank">赵正永的大管家 陕西前副省长陈国强被双开</a><br></h3>1月4日，中共陕西省政府前党组成员、副省长陈国强“严重违纪违法问题”被立案审查调查及被双开。陈国强被指是陕西前书记赵正永的“大管家”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 2:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766515.md#1" target="_blank">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br></h3>武汉爆发不明原因肺炎已经有病患44例，但当局至今仍未公布致病的病毒种类。香港《苹果日报》独家获悉，当地已掌握导致这次不明肺炎爆发的病毒。香港政府已拟定了进一步加强防疫的措施，最快4日公布。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
