--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,8 +4,8 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
@@ -30,6 +30,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772623.md#1">武汉网友爆2位家人患不明肺炎 器官衰竭</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770883.md#1">【翻墙必看】分析：王志民突然被撤职内幕</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772281.md#1">骆惠宁赴中联办首日打亲民牌 港人戒备</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772040.md#1">武汉肺炎病人过去一周医药费高达4.3万</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770976.md#1">骆惠宁主掌中联办 分析：对香港“硬不来”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771280.md#1">【唐靖远快评】中联办突换人 骆惠宁上任3特别</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770622.md#1">【内幕】谍影重重 中共利用赴美游客窃密</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770833.md#1">《转法轮》发行25周年 澳学员感受大法洪恩</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772269.md#1">被埋37天 广州地陷埋3人仅搜出1人遗体</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772223.md#1">沪指大幅震荡 3100点得而复失</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772046.md#1">武汉巴登城旅游项目发生坍塌事故 6死5伤</a><br>
