--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -31,9 +31,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/15/1/15/n4343055.md#1" target="_blank">士为知己者死 古人交友重义胜于生命</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/15/1/15/n4343055.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/Boya-150x120.jpg" align ="left"></a>古人云：“ 千金易得，知己难求。”“士为知己者死”、“知遇之恩”、“海内存知己，天涯若比邻”。古人非常重视朋友的交往，人生能得一知己死而无憾。管仲得到鲍叔牙的识拔而为齐国宰相；伯牙与钟子期一曲高山流水而相知；豫让为报智伯知遇之恩多次刺杀赵襄子没成功，后自杀。古人对知己的看重，远在金钱名利之上，甚至超过了生命。诸如此类的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/24/n11743506.md#1" target="_blank">孔子后悔的事：以言取人，以貌取人</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/24/n11743506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/eec3c05064e2e2167d6119df777cfb7c-150x120.jpg" align ="left"></a>常言道：“人非圣贤，孰能无过？”历代天子士人所敬重的孔子，晚年时曾对二件事感到懊悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764851.md#1" target="_blank">再走一趟中华路</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/150413140609836-150x120.jpg" align ="left"></a>中华商场初建和繁盛时期，出现的各地小吃，都保持各自特殊的地方风味，其中涵隐着载不动的沉重乡愁。这是近几十年台湾饮食发展，非常重要的转折。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:26 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772696.md#1" target="_blank">童诗：破了一个洞</a><br></h3>啵！爸爸的外套破了一个洞
-用针缝一缝 
-心破了洞，可以补起来吗?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 11:24 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/10/2/9/n2813969.md#1" target="_blank">巧遇仙翁 唐宰相为何痛失成仙机会</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/10/2/9/n2813969.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/PK2C000204N000000000PAA-e1575535131399-150x120.jpg" align ="left"></a>他责备齐映，说：“你为何轻易地将事情泄露出去？你做神仙的事本可能成的，现在不行了。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11765966.md#1" target="_blank">歌词：山依依，水依依</a><br></h3> 山依依，水依依， 小雨叫醒春天的小溪。 爷爷穿着他爷爷留下的蓑衣， 守望着古老的河川， 用绿色勾勒出一片生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 10:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
