--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773300.md#1">文静：并非“上面政策是好的，下面执行搞坏了”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773235.md#1">【谈股论金】川普“以战止战”非长期利空</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773166.md#1">项云：无视人性准则是中共党性决定的</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772976.md#1">林辉：中共当年盘剥延安人 被骂很“黑”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770894.md#1">袁斌：中共删帖封号有多疯狂？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770624.md#1">东方觉：六岁孩子走六万步上学，令人心痛心酸</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770319.md#1">王友群：挪威图书馆风波背后的真相</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770143.md#1">周晓辉：美清除伊朗二号人物 中朝为何“认怂”？</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
